--- a/styles.css
+++ b/styles.css
@@ -29,18 +29,7 @@
 }
 
 #navbar__logo {
-    background-color: #ff8177;
-    background-image: linear-gradient(to top, #ff0844 0%, #ffb199 100%);
-    background-size: 100%;
-    -webkit-background-clip: text;
-    background-clip: text;
-    -moz-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    -moz-text-fill-color: transparent;
-    display: flex;
-    cursor: pointer;
-    text-decoration: none;
-    font-size: 2rem;
+    height: 80px;
 }
 
 .fa-gem {
