--- a/styles.css
+++ b/styles.css
@@ -39,6 +39,7 @@
 
 .navbar__item {
     height: 80px;
+   
 }
 
 .navbar__links {
@@ -57,6 +58,12 @@
 .navbar__links:hover {
     background: #000;
     transition: all 0.3s ease;
+}
+
+.navbar__item i {
+    position: absolute;
+    margin-bottom: 45px;
+
 }
 
 @media screen and (max-width: 960px) {
@@ -132,7 +139,7 @@ form button {
 
 .item__box {
     margin-top: 100px; 
-    margin-left: 20px;
+    margin-left: 30px;
     
 }
 
@@ -156,6 +163,7 @@ form button {
     transition: 0.5s linear;
     margin-bottom: 10px;
     border-radius: 10px;
+    
 }
 
 .items li span {
@@ -175,24 +183,5 @@ form button {
 
 date  {
     color: #000;
-    margin-left: 100px;
-    
-}
-
-/* Mobile Responsive */
-@media screen and (max-width: 768px) {
-.main {
-
-}
-
-.main__container {
-    display: grid;
-    grid-template-columns: auto;
-    align-items: center;
-    justify-self: center;
-    width: 100%;
-    margin: 0 auto;
-    
-}
-
+    margin-left: 100px;  
 }
