--- a/styles.css
+++ b/styles.css
@@ -138,6 +138,7 @@ form button {
 .item__container {
     margin-top: 100px; 
     margin-left: 30px; 
+    float: left;
 }
 
 .item__list {
@@ -235,11 +236,12 @@ date  {
 }
 
 #reader {
-    width: 15%;
+    width: 20%;
+    height: 20%;
     float: right;
     margin-right: 100px;
-    position: relative;
-    display: flex;
+    margin-top: 100px;
+    
 }
 
 /* Settings Page */
